# pips

./: README.md  pyproject.toml
examples/: easy.json  puzzle1.json  puzzle_l_shaped.json  puzzle_simple.json  puzzle_unsolvable.json  puzzle_with_dominoes.json  puzzle_with_hole.json
src/pips_solver/: __init__.py  extract.py  main.py  parser.py  solver.py  structures.py  web.py
static/: script.js  style.css
templates/: index.html
tests/: __init__.py  test_extract.py  test_solver.py
